--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -121,29 +121,40 @@
                     <div class="slide_box">
                         <div class="slide_list">
                             <div  class="list_sub slide01">
-                                <div class="slide_photo"><a href=""><img src="images/RE37lBy.webp" alt=""></a></div>
+                                <div class="slide_photo">
+                                    <a href=""><img src="images/RE37lBy.webp" alt=""></a>
+                                </div>
                                 <div class="slide_content">
                                     <h1>여러분을 위한 365</h1>
                                     <p>날마다 Office 365로 할 수 있는 일들을 찾아보세요.</p>
                                     <div class="content_btn">
-                                        <div class="content_more">
-                                            <span>최대 6명 사용 가능</span>
+                                        <div>
+                                            <a href="" class="content_more">
+                                                <span>최대 6명 사용 가능</span>
+                                            </a> 
                                         </div>
-                                        <div class="content_more blan">
-                                            <span>1명 사용 가능</span>
+                                        <div>
+                                            <a href="" class="blan">
+                                                <span>1명 사용 가능</span>
+                                            </a>
                                         </div>
+                                        
                                     </div>    
                                 </div>  
                             </div>
                             <div  class="list_sub slide02">
-                                <div class="slide_photo"><a href=""><img src="images/RE3NJb7.webp" alt=""></a></div>
+                                <div class="slide_photo">
+                                    <a href=""><img src="images/RE3NJb7.webp" alt=""></a>
+                                </div>
                                 <div class="slide_content">
                                     <h1>새로운 Surface Pro 7</h1>
                                     <p>완벽한 일상용 노트북이 이제 더욱 빨라졌습니다.</p>
                                     <div class="content_btn">
-                                        <div class="content_more">
-                                            <span>지금쇼핑하기</span>
-                                        </div>
+                                        <div>
+                                            <a href="" class="content_more">
+                                                <span>지금쇼핑하기</span>
+                                            </a>
+                                        </div>   
                                     </div>
                                 </div>  
                             </div>
@@ -173,9 +184,9 @@
                 </div> 
             </div>
         <!-- main_contents -->
-            <div class="main_contents clear" >
-                <div class="clear">
-                    <div class="section_list">
+            <div class="main_contents" >
+                <div>
+                    <div class="section_list clear">
                         <section class="contents_sec">
                             <div>
                                 <img src="images/RE3NOmL.webp">
@@ -252,7 +263,7 @@
             <div class="main_contents user " >
                 <h2>기업 사용자</h2>
                 <div class="clear">
-                    <div class="section_list">
+                    <div class="section_list clear">
                         <section class="contents_sec">
                             <div>
                                 <img src="images/RE1CmIw.webp">
@@ -279,8 +290,6 @@
                                 </div>
                             </div>
                         </section>
-                    </div>
-                    <div class="section_list right">
                         <section class="contents_sec">
                             <div>
                                 <img src="images/RE3sKm8.webp">
@@ -328,11 +337,11 @@
         <div class="footer_inner">
             <nav class="footer_nav">
                 <div class="footer_nav_inner">
-                    <ul class="site_map open" >
+                    <ul class="footer_map clear" >
                         <li>
                             <h3>새로운 기능</h3>
                             <a href="">
-                                <ul class="site_map_sub">
+                                <ul class="footer_map_sub">
                                     <li><a href="">Surface Pro X</a></li>
                                     <li><a href="">Surface Pro 7</a></li>
                                     <li><a href="">Surface Laptop 3</a></li>
@@ -345,7 +354,7 @@
                         <li>
                             <h3>Microsoft Store</h3>
                             <a href="">
-                                <ul class="site_map_sub">
+                                <ul class="footer_map_sub">
                                     <li><a href="">계정 프로필</a></li>
                                     <li><a href="">다운로드 센터</a></li>
                                     <li><a href="">Microsoft Store 지원</a></li>
@@ -357,7 +366,7 @@
                         <li>
                             <h3>교육</h3>
                             <a href="">
-                                <ul class="site_map_sub">
+                                <ul class="footer_map_sub">
                                     <li><a href="">교육 분야의 Microsoft</a></li>
                                     <li><a href="">학생용 Office</a></li>
                                     <li><a href="">학교용 Office 365</a></li>
@@ -369,7 +378,7 @@
                         <li>
                             <h3>대기업</h3>
                             <a href="">
-                                <ul class="site_map_sub">
+                                <ul class="footer_map_sub">
                                     <li><a href="">Azure</a></li>
                                     <li><a href="">AappSourece</a></li>
                                     <li><a href="">자동차</a></li>
@@ -384,7 +393,7 @@
                         <li>
                             <h3>개발자</h3>
                             <a href="">
-                                <ul class="site_map_sub">
+                                <ul class="footer_map_sub">
                                     <li><a href="">Microsoft Visual Studio</a></li>
                                     <li><a href="">Windows 개발자 센터</a></li>
                                     <li><a href="">개발자 네트워크</a></li>
@@ -397,7 +406,7 @@
                         <li>
                             <h3>회사</h3>
                             <a href="">
-                                <ul class="site_map_sub">
+                                <ul class="footer_map_sub">
                                     <li><a href="">채용 정보</a></li>
                                     <li><a href="">Microsoft정보</a></li>
                                     <li><a href="">회사 뉴스</a></li>
@@ -412,14 +421,14 @@
                 
             </nav>
             <div class="footer_etc">
-                <div class="footer_etc_inner">
+                <div class="footer_etc_inner clear">
                     <div class="footer_etc_lang">
                         <a href="">
                             한국어(대한민국)
                         </a>
                     </div>
                     <div class="footer_ect_coppyright">
-                        <ul>
+                        <ul class="clear">
                             <li><a href="">Microsoft에 문의</a></li>
                             <li><a href="">개인정보처리방침</a></li>
                             <li><a href="">사용약관</a></li>
