--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -127,7 +127,7 @@
                                 <div class="slide_content">
                                     <h1>여러분을 위한 365</h1>
                                     <p>날마다 Office 365로 할 수 있는 일들을 찾아보세요.</p>
-                                    <div class="content_btn">
+                                    <div class="content_btn clear">
                                         <div>
                                             <a href="" class="content_more">
                                                 <span>최대 6명 사용 가능</span>
@@ -161,6 +161,10 @@
                         </div>
                     </div>
                     <div class="slide_btn_box">
+                        <div class="slide_btn prev"><a href=""></a></div>
+                        <div class="slide_btn next"><a href=""></a></div>
+                    </div>
+                    <div class="slide_pagination">
                         <div class="visual_page_button">
                             <button class="page_num"><div></div></button>
                             <button class="page_num"><div></div></button>
@@ -177,10 +181,6 @@
                             </button>
                         </div>
                     </div>
-                    <ul class="slide_pagination">
-                        <li class="pagin prev"><a href=""></a></li>
-                        <li class="pagin next"><a href=""></a></li>
-                    </ul>
                 </div> 
             </div>
         <!-- main_contents -->
