--- a/K-Life insurance/index.html
+++ b/K-Life insurance/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>생명보험협회</title>
-    <script></script>
+    <script type="text/javascript" src="./js/index.js"></script>
 </head>
 <body>
     <div class="k-insurance-wrap">
