css 세분화 파일 생성

--- a/K-Life insurance/index.html
+++ b/K-Life insurance/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>생명보험협회</title>
     <link rel="stylesheet" media="all" type="text/css" href="css/common.css">
+    <link rel="stylesheet" media="all" type="text/css" href="css/header.css">
+    <link rel="stylesheet" media="all" type="text/css" href="css/main.css">
+    <link rel="stylesheet" media="all" type="text/css" href="css/footer.css">
     <script type="text/javascript" src="./js/index.js"></script>
 </head>
 <body>
