--- a/K-Life insurance/index.html
+++ b/K-Life insurance/index.html
@@ -20,7 +20,7 @@
                     <ul class="nav-group1 clear">
                         <li>
                             <a href="">소비자</a>
-                            <ul class="nav-group2 on inwrap">
+                            <ul class="nav-group2  inwrap ">
                                 <li>
                                     <ul class="nav-group3">
                                         <li><a href="">소비자포털</a></li>
@@ -472,12 +472,12 @@
             </div>
         </header>
     <!-- main -->
-        <main style="display: none;">
+        <main>
             <div class="main-inner">
                 <div class="section-wrap">
                 <!--1. home -->
                     <section id="section01">
-                        <div class="section-inner">
+                        <div class="section-inner inwrap">
                             <div class="in-wrap">
                                 <div class="title">
                                     <p>"New Value Creation"</p>
@@ -561,7 +561,7 @@
                     </section>
                 <!-- 2.생명보험협회  -->
                     <section id="section02">
-                        <div class="section-inner">
+                        <div class="section-inner inwrap">
                             <div class="in-wrap">
                                 <h2>생명보험협회</h2>
                                 <div class="section-contents">
@@ -747,7 +747,7 @@
                     </section>
                 <!-- 3.소비자 -->
                     <section id="section03">
-                        <div class="section-inner">
+                        <div class="section-inner inwrap">
                             <div class="in-wrap">
                                 
                                 <div class="section-contents">
@@ -803,7 +803,7 @@
                     </section>
                 <!-- 4.모집종사자 -->
                     <section id="section04">
-                        <div class="section-inner">
+                        <div class="section-inner inwrap">
                             <div class="in-wrap">
                                 <h2>모집종사자</h2>
                                 <div class="col4">
@@ -869,7 +869,7 @@
                     </section>
                 <!-- 5.회원사 -->
                     <section id="section05">
-                        <div class="section-inner">
+                        <div class="section-inner inwrap">
                             <div class="in-wrap">
                                 <h2>회원사</h2>
                                 <div class="col5">
