--- a/K-Life insurance/index.html
+++ b/K-Life insurance/index.html
@@ -481,33 +481,50 @@
                             <div class="in-wrap">
                                 <div class="title">
                                     <p>"New Value Creation"</p>
-                                    <h2>생명보험</h2>
+                                    <h2>생명보험 산업의 새로운 가치 창출</h2>
                                 </div>
                                 <div class="section-contents">
-                                    <div class="col4">
-                                        <div class="col"><a href="">
-                                            <i></i>
-                                            <h3>소비자</h3>
-                                            <p>생명보험소비자가 꼭 알아야 할 주요 정보</p>
-                                        </a></div>
-                                        <div class="col"><a href="">
-                                            <i></i>
-                                            <h3>모집종사자</h3>
-                                            <p>보험고객의 미래를 설계하는 모집종사자 관리센터</p>
-                                        </a></div>
-                                        <div class="col"><a href="">
-                                            <i></i>
-                                            <h3>회원사</h3>
-                                            <p>보험문화 확산을 위한 건전한 자율규제 운영</p>
-                                        </a></div>
+                                    <div class="col4 clear">
                                         <div class="col col2">
                                             <div class="col"><a href="">
                                                 <h3>생명보험협회</h3>
                                                 <p>보험가입자의 권익보호 및 건전한 보험문화 확산</p>
                                                 <span class="btn-go">바로가기 →</span>
                                             </a></div>
-                                            <div class="col"><a href=""></a></div>
+                                            <div class="col"><a href="">
+                                                <h4>자주찾는 메뉴</h4>
+                                                <ul class="fav-menu">
+                                                    <li><a href="">
+                                                        <i></i>
+                                                        <span>소비자포털</span>
+                                                    </a></li>
+                                                    <li><a href="">
+                                                        <i></i>
+                                                        <span>내보험찾아줌(보험가입조회)</span>
+                                                    </a></li>
+                                                    <li><a href="">
+                                                        <i></i>
+                                                        <span>설계사 등록/말소</span>
+                                                    </a></li>
+                                                </ul>
+                                            </a></div>
                                         </div>
+                                        <div class="col"><a href="">
+                                            <i></i>
+                                            <h3>소비자</h3>
+                                            <p>생명보험소비자가</br>꼭 알아야 할 주요 정보</p>
+                                        </a></div>
+                                        <div class="col"><a href="">
+                                            <i></i>
+                                            <h3>모집종사자</h3>
+                                            <p>보험고객의 미래를 설계하는</br> 모집종사자 관리센터</p>
+                                        </a></div>
+                                        <div class="col"><a href="">
+                                            <i></i>
+                                            <h3>회원사</h3>
+                                            <p>보험문화 확산을 위한</br> 건전한 자율규제 운영</p>
+                                        </a></div>
+                                       
                                     </div>
                                 </div>
                             </div>
