--- a/K-Life insurance/index.html
+++ b/K-Life insurance/index.html
@@ -590,8 +590,8 @@
                                         <div class="col">
                                             <div class="tab-wrap">
                                                 <div class="tab">
-                                                    <a href="" class="hide on">공지사항</a>
-                                                    <a href="">보도자료</a>
+                                                    <a href="" class="hide">공지사항</a>
+                                                    <a href="" class="on">보도자료</a>
                                                     <a href="">회원사소식</a>
                                                     <span class="more-btn">MORE</span>
                                                 </div>
@@ -720,7 +720,7 @@
                                         <div class="col">
                                             <div class="col-notice">
                                                 <div class="notice-tab">
-                                                    <a href="">공지사항</a>
+                                                    <p>공지사항</p>
                                                     <span class="more-btn">MORE</span>
                                                 </div>
                                                 <ul class="notice-ext-contents">
@@ -744,7 +744,7 @@
                                             </div>
                                         </div>
                                         <div class="col">
-                                            <ul>
+                                            <ul class="more-info-wrap clear">
                                                 <li><a href="">
                                                     <i></i>
                                                     <p>협회소개</p>
@@ -757,8 +757,7 @@
                                                 </a></li>
                                                 <li><a href="">
                                                     <i></i>
-                                                    <p>회원사 및 유관기관 안내</p>
-                                                     
+                                                    <p class="r2">회원사 및</br>유관기관 안내</p>
                                                     <span class="btn-go">바로가기 →</span>
                                                 </a></li>
                                             </ul>
@@ -773,27 +772,34 @@
                         <div class="section-inner inwrap">
                             <div class="in-wrap">
                                 <div class="section-contents">
-                                    <div class="col3">
-                                        <div class="col">
-                                            <div>
+                                    <div class="col3 clear">
+                                        <!-- col2 -->
+                                        <div class="col col2">
+                                            <div class="col">
                                                 <h2>소비자</h2>
-                                                <ul class="custom-link">
-                                                    <li><a href="">휴면계좌통합조회</a></li>
-                                                    <li><a href="">교육문화센터</a></li>
-                                                    <li><a href="">사회공헌활동</a></li>
-                                                    <li><a href="">보험대리점공시</a></li>
-                                                </ul>
-                                                <ul class="custom-link">
-                                                    <li><a href="">생명보험 통계</a></li>
-                                                    <li><a href="">생명보험사회공헌활동공시</a></li>
-                                                    <li><a href="">보험사기 예방안내</a></li>
-                                                    <li><a href="">금융거래주소일괄변경 안내</a></li>
-                                                </ul>
+                                                <div class="custom-link-wrap clear">
+                                                    <ul class="custom-link">
+                                                        <li><a href="">휴면계좌통합조회</a></li>
+                                                        <li><a href="">교육문화센터</a></li>
+                                                        <li><a href="">사회공헌활동</a></li>
+                                                        <li><a href="">보험대리점공시</a></li>
+                                                    </ul>
+                                                    <ul class="custom-link">
+                                                        <li><a href="">생명보험 통계</a></li>
+                                                        <li><a href="">생명보험사회공헌활동공시</a></li>
+                                                        <li><a href="">보험사기 예방안내</a></li>
+                                                        <li><a href="">금융거래주소일괄변경 안내</a></li>
+                                                    </ul>
+                                                </div>
+                                                
+                                            </div>
+                                            <div class="col custom-img">
+                                                <div></div>
                                             </div>
                                         </div>
-                                        <div class="col"></div>
+                                        <!-- col2-end -->
                                         <div class="col">
-                                            <ul>
+                                            <ul class="custom-go clear">
                                                 <li><a href="">
                                                     <h3>소비자포털</h3>
                                                     <p>생명보험소비자가 꼭 알아야 할 주요 정보</p>
@@ -830,16 +836,16 @@
                         <div class="section-inner inwrap">
                             <div class="in-wrap">
                                 <h2>모집종사자</h2>
-                                <div class="col4">
+                                <div class="col4 clear">
                                     <div class="col">
                                         <a href="">
                                             <div class="col-text">
-                                                <strong>모집종사자 관련안내 및 조회</strong>
-                                                <p>설계사 등록조회, 말소신청 e클린보험 서비스</p>
-                                                <div class="col-img-wrap">
-                                                    <img src="images/recruit_obj0101.png" alt="">
-                                                    <img src="images/recruit_obj0102.png" alt="">
-                                                </div>
+                                                <strong>모집종사자</br>관련안내 및 조회</strong>
+                                                <p>설계사 등록조회, 말소신청</br> e클린보험 서비스</p>   
+                                            </div>
+                                            <div class="col-img-wrap">
+                                                <img src="images/recruit_obj0101.png" alt="">
+                                                <img src="images/recruit_obj0102.png" alt="">
                                             </div>
                                         </a>
                                     </div>
@@ -847,12 +853,15 @@
                                         <a href="">
                                             <div class="col-text">
                                                 <strong>보험대리점 관리자</strong>
-                                                <p>보험대리점 검사관련 안내 및 참고자료</p>
-                                                <div class="col-img-wrap">
-                                                    <img src="images/recruit_obj0201.png" alt="">
-                                                    <img src="images/recruit_obj0202.png" alt="">
-                                                    <img src="images/recruit_obj0203.png" alt="">
-                                                </div>
+                                                <p>보험대리점 검사관련 안내 및</br> 참고자료</p>
+                                            </div>
+                                            <div class="col-img-wrap">
+                                                <img src="images/recruit_obj0401.png" alt="">
+                                                <img src="images/recruit_obj0402.png" alt="">
+                                                <img src="images/recruit_obj0403.png" alt="">
+                                                <img src="images/recruit_obj0404.png" alt="">
+                                                <img src="images/recruit_obj0405.png" alt="">
+
                                             </div>
                                         </a>
                                     </div>
@@ -860,15 +869,12 @@
                                         <a href="">
                                             <div class="col-text">
                                                 <strong>자격시험센터</strong>
-                                                <p>설계사, 변액보험, 언더라이터, 종합자산관리사</p>
-                                                <div class="col-img-wrap">
-                                                    <img src="images/recruit_obj0301.png" alt="">
-                                                    <img src="images/recruit_obj0302.png" alt="">
-                                                    <img src="images/recruit_obj0302_top.png" alt="">
-                                                    <img src="images/recruit_obj0303.png" alt="">
-                                                    <img src="images/recruit_obj0304.png" alt="">
-                                                    <img src="images/recruit_obj0305.png" alt="">
-                                                </div>
+                                                <p>설계사, 변액보험, 언더라이터,</br> 종합자산관리사</p>
+                                            </div>
+                                            <div class="col-img-wrap">
+                                                <img src="images/recruit_obj0201.png" alt="">
+                                                <img src="images/recruit_obj0202.png" alt="">
+                                                <img src="images/recruit_obj0203.png" alt="">
                                             </div>
                                         </a>
                                     </div>
@@ -876,14 +882,15 @@
                                         <a href="">
                                             <div class="col-text">
                                                 <strong>우수인증설계사</strong>
-                                                <p>전문성과 윤리성을 충족한 우수설계사</p>
-                                                <div class="col-img-wrap">
-                                                    <img src="images/recruit_obj0401.png" alt="">
-                                                    <img src="images/recruit_obj0402.png" alt="">
-                                                    <img src="images/recruit_obj0403.png" alt="">
-                                                    <img src="images/recruit_obj0404.png" alt="">
-                                                    <img src="images/recruit_obj0405.png" alt="">
-                                                </div>
+                                                <p>전문성과 윤리성을 충족한</br> 우수설계사</p>
+                                            </div>
+                                            <div class="col-img-wrap">
+                                                <img src="images/recruit_obj0301.png" alt="">
+                                                <img src="images/recruit_obj0302.png" alt="">
+                                                <img src="images/recruit_obj0302_top.png" alt="">
+                                                <img src="images/recruit_obj0303.png" alt="">
+                                                <img src="images/recruit_obj0304.png" alt="">
+                                                <img src="images/recruit_obj0305.png" alt="">
                                             </div>
                                         </a>
                                     </div>
@@ -896,40 +903,40 @@
                         <div class="section-inner inwrap">
                             <div class="in-wrap">
                                 <h2>회원사</h2>
-                                <div class="col5">
+                                <div class="col5 clear">
                                     <div class="col">
                                         <a href="">
                                             <i class="col-icon"></i>
-                                            <strong>생명보험상품 광고심의</strong>
-                                            <p>올바른 보험상품 광고문화 정착의 첫걸음</p>
+                                            <strong>생명보험상품</br> 광고심의</strong>
+                                            <p class="show">올바른 보험상품 광고문화</br> 정착의 첫걸음</p>
                                         </a>
                                     </div>
                                     <div class="col">
                                         <a href="">
                                             <i class="col-icon"></i>
                                             <strong>신상품심의위원횐</strong>
-                                            <p>신상품 개발이익보호를 위한 배타적 사용권부여</p>
+                                            <p class="show">신상품 개발이익보호를 위한 </br>배타적 사용권부여</p>
                                         </a>
                                     </div>
                                     <div class="col">
                                         <a href="">
                                             <i class="col-icon"></i>
-                                            <strong>생명보험협회 자율규제 운영</strong>
-                                            <p>협회가 제정, 운영하는 각종규정 안내</p>
+                                            <strong>생명보험협회</br> 자율규제 운영</strong>
+                                            <p class="show">협회가 제정, 운영하는</br> 각종규정 안내</p>
                                         </a>
                                     </div>
                                     <div class="col">
                                         <a href="">
                                             <i class="col-icon"></i>
                                             <strong>IFRS 17</strong>
-                                            <p>회원사IFRS17 정보공유 포털</p>
+                                            <p class="show">회원사IFRS17</br> 정보공유 포털</p>
                                         </a>
                                     </div>
                                     <div class="col">
                                         <a href="">
                                             <i class="col-icon"></i>
                                             <strong>옴부즈만</strong>
-                                            <p>불합리한 금융규제 등에 대한 개선건의</p>
+                                            <p class="show">불합리한 금융규제 등에 </br>대한 개선건의</p>
                                         </a>
                                     </div>
                                 </div>
@@ -940,7 +947,7 @@
             </div>
         </main>
     <!-- footer -->
-        <footer style="display: none;">
+        <footer>
             <div class="footer-inner">
                 <div class="footer-swipe">
                     <div class="swipe-container">
